--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,6 +1,5 @@
 .cards {
   text-align: left;
-
   margin-top: 30px;
 }
 
@@ -11,4 +10,5 @@
   grid-gap: 20px 17px;
   padding: 0;
   margin: 0;
+  padding-top: 29px;
 }
