--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,33 +1,26 @@
 .footer {
   max-width: 880px;
-    height: 18px;
   color: #545454;
   padding-bottom: 60px;
   padding-top: 67px;
   margin: 0 auto;
-
-  
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 18px;
 }
 
 .footer__copyright {
-font-family: "Inter", Arial, sans-serif;
   font-weight: 400;
   line-height: 21.78px;
-  font-size: 18px;
-  width: 880px;
+  /* width: 880px; */
+  width: 100%;
+  margin: 0;
 }
 
 @media screen and (max-width: 480px) {
   .footer {
-     margin: 0 auto; 
-    width: 282px;
-    height: 14px;
-    top: 2762px;
-    left: 19px;
+    /* width: 282px; */
+    width: 100%;
     gap: 0px;
-    opacity: 0px;
-    font-family: "Inter", Arial, sans-serif
-    font-size: 14px;
     font-weight: 400;
     line-height: 16.94px;
     text-align: left;
