--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,3 @@
 .header {
-  margin-top: 45px;
-  max-width: 880px;
-  border-bottom: ;
+  padding-bottom: 40px;
 }
