--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,8 +2,6 @@
   display: flex;
   align-items: center;
   padding-top: 40px;
-  padding-left: 16px;
-  padding-bottom: 45px;
   max-width: 880px;
   margin: 0 auto;
 }
@@ -29,7 +27,7 @@
 }
 
 .profile__edit-button:hover {
-  background: transparent url(../images/Edit+Button+hover.svg) center no-repeat;
+  opacity: 0.6;
 }
 
 .profile__add-button {
@@ -40,10 +38,13 @@
   border: 2px;
   border-radius: 2px;
   cursor: pointer;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__add-button:hover {
-  background: transparent url(../images/Add+button+hover.svg) center no-repeat;
+  opacity: 0.6;
 }
 
 .profile__title {
@@ -52,7 +53,7 @@
   font-weight: 500;
   grid-area: title;
   margin: 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   width: 400px;
 }
@@ -63,7 +64,7 @@
   font-weight: 400;
   grid-area: description;
   margin: 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 400;
   padding-top: 10px;
 }
@@ -87,6 +88,10 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
+  }
+
+  .profile__title {
+    margin: 0 auto;
   }
 
   .profile__description {
